--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_launcher_icons:
   flutter_native_splash: ^1.3.3
+
+flutter_icons:
+  image_path: "icon.png"
+  android: true
+  ios: true
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -66,7 +73,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
